syntax = "proto3";

package marble.play;

// ========================================
// P2P messages (with Gossip metadata)
// ========================================

message P2PMessage {
  // Gossip metadata
  string message_id = 1;       // UUID for deduplication
  uint32 ttl = 2;              // Remaining hop count
  uint32 origin_group = 3;     // Origin mesh group
  string origin_user = 4;      // Original sender

  oneof payload {
    // Join notification
    PlayerJoined player_joined = 10;

    // Player input
    PlayerInput player_input = 11;

    // Physics sync
    FrameHash frame_hash = 12;
    SyncRequest sync_request = 13;
    SyncState sync_state = 14;

    // RTT measurement
    Ping ping = 15;
    Pong pong = 16;

    // Social
    ChatMessage chat_message = 17;
    Reaction reaction = 18;

    // Game start/end
    GameStart game_start = 19;
  }
}

// ========================================
// Join notification
// ========================================

// New player joined (joined client -> all)
message PlayerJoined {
  string user_id = 1;
}

// ========================================
// Player input
// ========================================

// Player click input (one-click game)
message PlayerInput {
  uint64 frame = 1;
  string user_id = 2;
}

// ========================================
// Physics sync
// ========================================

// Frame hash (host -> all, determinism verification)
message FrameHash {
  uint64 frame = 1;
  uint64 hash = 2;
}

// Sync request (client -> host)
message SyncRequest {
  uint64 from_frame = 1;
}

// Sync state (host -> requesting client)
message SyncState {
  uint64 frame = 1;
  bytes state = 2;  // SyncSnapshot serialized data
}

// ========================================
// RTT measurement
// ========================================

message Ping {
  double timestamp = 1;
}

message Pong {
  double timestamp = 1;
}

// ========================================
// Social
// ========================================

message ChatMessage {
  string user_id = 1;
  string content = 2;
  uint64 timestamp_ms = 3;
}

message Reaction {
  string user_id = 1;
  string emoji = 2;
  uint64 timestamp_ms = 3;
}

// ========================================
// Game start/end
// ========================================

// Game start (host -> all)
message GameStart {
  uint64 seed = 1;            // RNG seed
  bytes initial_state = 2;    // SyncSnapshot serialized data
  string gamerule = 3;        // Selected gamerule (e.g., "top_n", "last_n")
  uint64 session_version = 4; // Session version (for respawn distinction)
}
